[project]
name = "dicom2pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamad AlJasem",email = "m-aljasem@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.10)",
    "pydicom (>=2.3)",
    "numpy (>=1.21)",
    "matplotlib (>=3.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
